// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shader store > positive cases > golden snapshot per module (shader diffs become reviewable) > corona 1`] = `
"

struct Frame {
  viewProj: mat4x4f,
  invViewProj: mat4x4f,
  camera: vec4f,
  // Environment (plan 074/06): sun direction (unit, towards the sun; .w = CURRENT ARC ELEVATION 0..1,
  // the sun-vis v2 threshold input — 074/07), sun colour,
  // params  = [dn (0 day → 1 night), indirectScale, directScale, emissiveBoost],
  // skyTop / skyHorizon = LINEAR sky gradient colours (row 4 v1 — the PBR LUT replaces them later),
  // fog     = [cutDistance, startDistance, heightK, heightMin] (row 5 — the 068 shape),
  // params2 = [aoStrength (074/07 baked skyVis → indirect), sunVisStrength (074/07 baked sun shadows),
  //            time seconds (the wind clock), windStrength (074/06 row 10)],
  // moonDir/moonColor = the night light (074/06 row 6; colour is BLACK by day — the CPU arc gates it);
  // moonDir.w = stochastic de-tiling toggle (074/12; the vec4 slot was spare).
  sunDir: vec4f,
  sunColor: vec4f,
  params: vec4f,
  skyTop: vec4f,
  skyHorizon: vec4f,
  fog: vec4f,
  params2: vec4f,
  moonDir: vec4f,
  moonColor: vec4f,
  // params3 = [localLightCount (074/06 row 7), spare, spare, spare].
  params3: vec4f,
};
@group(0) @binding(0) var<uniform> frame: Frame;
@group(0) @binding(1) var skyLut: texture_2d<f32>;
@group(0) @binding(2) var skyLutSampler: sampler;

// Shared sky colour by view direction (the sky pass AND the world fog sample the same PBR dome — fully
// fogged geometry dissolves into exactly the sky behind it, the 068 invariant). The dome is a CPU-built
// Preetham LUT (074/06 row 4): u = azimuthal angle from the sun (the dome is sun-symmetric), v = elevation.
fn skyColorFor(dir: vec3f) -> vec3f {
  let elevation = clamp(dir.y, 0.0, 1.0);
  let dirXz = normalize(vec2f(dir.x, dir.z) + vec2f(1e-5, 0.0));
  let sunXz = normalize(vec2f(frame.sunDir.x, frame.sunDir.z) + vec2f(1e-5, 0.0));
  let azimuth = acos(clamp(dot(dirXz, sunXz), -1.0, 1.0)) / 3.14159265;
  let v = clamp((dir.y + 0.05) / 1.05, 0.0, 1.0);
  let base = textureSampleLevel(skyLut, skyLutSampler, vec2f(azimuth, v), 0.0).rgb;
  // Structured sun (074/06 row 4 polish): a hot angular DISC (~0.5°) + tight corona + circumsolar glow +
  // wide forward-scatter haze. The disc overshoots 1.0 on purpose — the un-tonemapped sRGB output clips the
  // core to white while the fringe keeps the timecyc sun colour (orange limb at dusk for free); plan 09's
  // HDR chain will feed the same overshoot into bloom/god-rays instead of clipping.
  let sunDot = max(dot(dir, frame.sunDir.xyz), 0.0);
  let disc = smoothstep(0.99985, 0.99997, sunDot) * 12.0;
  let corona = pow(sunDot, 600.0) * 2.2;
  let circumsolar = pow(sunDot, 32.0) * 0.5;
  let haze = pow(sunDot, 8.0) * 0.08;
  let glow = frame.sunColor.rgb * (disc + corona + circumsolar + haze);
  // Moon disc + faint halo (074/06 row 6): moonColor is BLACK by day, so this whole term dies with it;
  // the disc lives in the shared sky so fogged geometry dissolves into the moon behind it (068 invariant).
  let moonDot = max(dot(dir, frame.moonDir.xyz), 0.0);
  // Wide soft halo (pow 96) marks the spot in the horizon band; the disc itself stays small and bright.
  let moon = frame.moonColor.rgb * (smoothstep(0.9985, 0.9993, moonDot) * 14.0 + pow(moonDot, 96.0) * 2.2);
  return base + glow + moon;
}

// Local light pool (074/06 row 7): up to 64 point lights (2dfx street lamps + host dynamics — vehicle
// headlights), CPU-filled each frame. The world consumes it in the VERTEX shader (SA is vertex-lit and
// world verts ≪ pixels); small dynamic entities sample it per pixel. Bounded loop (count ≤ 64 — guardrail).
struct LocalLight {
  position: vec4f, // xyz world + radius
  color: vec4f,    // linear RGB × intensity; w spare
};
@group(0) @binding(3) var<storage, read> localLights: array<LocalLight>;

fn localLightSum(world: vec3f, normal: vec3f) -> vec3f {
  var sum = vec3f(0.0);
  let count = min(u32(frame.params3.x), 64u);
  for (var index = 0u; index < count; index += 1u) {
    let light = localLights[index];
    let toLight = light.position.xyz - world;
    let dist = length(toLight);
    let radius = light.position.w;
    if (dist < radius) {
      // Wrapped N·L (lamps bleed around corners a little — the SA look) × smooth quadratic falloff.
      let ndl = clamp((dot(normal, toLight / max(dist, 0.01)) + 0.4) / 1.4, 0.0, 1.0);
      let falloff = 1.0 - dist / radius;
      sum += light.color.rgb * (ndl * falloff * falloff);
    }
  }
  return sum;
}


// 2dfx coronas (074/06 row 13 v1): instanced camera-facing quads, PROCEDURAL radial glow (the particle.txd
// sprites arrive with the texture path later), additive premultiplied blending, depth READ (occluders hide
// coronas). Night-gated on the CPU side (dn scales the instance colour before upload).
struct CoronaIn {
  @location(0) corner: vec2f,
  @location(1) center: vec3f,
  @location(2) size: f32,
  @location(3) color: vec4f,
};

struct CoronaOut {
  @builtin(position) clip: vec4f,
  @location(0) offset: vec2f,
  @location(1) color: vec4f,
};

@vertex
fn vsCorona(in: CoronaIn) -> CoronaOut {
  var out: CoronaOut;
  // Camera basis from the inverse view-projection is overkill — build right/up from the view matrix baked
  // into viewProj via the camera position: cheap billboard using the eye-to-center frame.
  let toEye = normalize(frame.camera.xyz - in.center);
  let right = normalize(cross(vec3f(0.0, 1.0, 0.0), toEye));
  let up = cross(toEye, right);
  let world = in.center + (right * in.corner.x + up * in.corner.y) * in.size;
  out.clip = frame.viewProj * vec4f(world, 1.0);
  out.offset = in.corner;
  out.color = in.color;
  return out;
}

@fragment
fn fsCorona(in: CoronaOut) -> @location(0) vec4f {
  // Soft radial glow: bright core + wide falloff; premultiplied for the additive pipeline.
  let r = length(in.offset);
  let glow = pow(max(1.0 - r, 0.0), 2.2) + pow(max(1.0 - r, 0.0), 8.0) * 0.7;
  return vec4f(in.color.rgb * (glow * in.color.a), 0.0);
}
"
`;

exports[`shader store > positive cases > golden snapshot per module (shader diffs become reviewable) > frame 1`] = `
"
struct Frame {
  viewProj: mat4x4f,
  invViewProj: mat4x4f,
  camera: vec4f,
  // Environment (plan 074/06): sun direction (unit, towards the sun; .w = CURRENT ARC ELEVATION 0..1,
  // the sun-vis v2 threshold input — 074/07), sun colour,
  // params  = [dn (0 day → 1 night), indirectScale, directScale, emissiveBoost],
  // skyTop / skyHorizon = LINEAR sky gradient colours (row 4 v1 — the PBR LUT replaces them later),
  // fog     = [cutDistance, startDistance, heightK, heightMin] (row 5 — the 068 shape),
  // params2 = [aoStrength (074/07 baked skyVis → indirect), sunVisStrength (074/07 baked sun shadows),
  //            time seconds (the wind clock), windStrength (074/06 row 10)],
  // moonDir/moonColor = the night light (074/06 row 6; colour is BLACK by day — the CPU arc gates it);
  // moonDir.w = stochastic de-tiling toggle (074/12; the vec4 slot was spare).
  sunDir: vec4f,
  sunColor: vec4f,
  params: vec4f,
  skyTop: vec4f,
  skyHorizon: vec4f,
  fog: vec4f,
  params2: vec4f,
  moonDir: vec4f,
  moonColor: vec4f,
  // params3 = [localLightCount (074/06 row 7), spare, spare, spare].
  params3: vec4f,
};
@group(0) @binding(0) var<uniform> frame: Frame;
@group(0) @binding(1) var skyLut: texture_2d<f32>;
@group(0) @binding(2) var skyLutSampler: sampler;

// Shared sky colour by view direction (the sky pass AND the world fog sample the same PBR dome — fully
// fogged geometry dissolves into exactly the sky behind it, the 068 invariant). The dome is a CPU-built
// Preetham LUT (074/06 row 4): u = azimuthal angle from the sun (the dome is sun-symmetric), v = elevation.
fn skyColorFor(dir: vec3f) -> vec3f {
  let elevation = clamp(dir.y, 0.0, 1.0);
  let dirXz = normalize(vec2f(dir.x, dir.z) + vec2f(1e-5, 0.0));
  let sunXz = normalize(vec2f(frame.sunDir.x, frame.sunDir.z) + vec2f(1e-5, 0.0));
  let azimuth = acos(clamp(dot(dirXz, sunXz), -1.0, 1.0)) / 3.14159265;
  let v = clamp((dir.y + 0.05) / 1.05, 0.0, 1.0);
  let base = textureSampleLevel(skyLut, skyLutSampler, vec2f(azimuth, v), 0.0).rgb;
  // Structured sun (074/06 row 4 polish): a hot angular DISC (~0.5°) + tight corona + circumsolar glow +
  // wide forward-scatter haze. The disc overshoots 1.0 on purpose — the un-tonemapped sRGB output clips the
  // core to white while the fringe keeps the timecyc sun colour (orange limb at dusk for free); plan 09's
  // HDR chain will feed the same overshoot into bloom/god-rays instead of clipping.
  let sunDot = max(dot(dir, frame.sunDir.xyz), 0.0);
  let disc = smoothstep(0.99985, 0.99997, sunDot) * 12.0;
  let corona = pow(sunDot, 600.0) * 2.2;
  let circumsolar = pow(sunDot, 32.0) * 0.5;
  let haze = pow(sunDot, 8.0) * 0.08;
  let glow = frame.sunColor.rgb * (disc + corona + circumsolar + haze);
  // Moon disc + faint halo (074/06 row 6): moonColor is BLACK by day, so this whole term dies with it;
  // the disc lives in the shared sky so fogged geometry dissolves into the moon behind it (068 invariant).
  let moonDot = max(dot(dir, frame.moonDir.xyz), 0.0);
  // Wide soft halo (pow 96) marks the spot in the horizon band; the disc itself stays small and bright.
  let moon = frame.moonColor.rgb * (smoothstep(0.9985, 0.9993, moonDot) * 14.0 + pow(moonDot, 96.0) * 2.2);
  return base + glow + moon;
}

// Local light pool (074/06 row 7): up to 64 point lights (2dfx street lamps + host dynamics — vehicle
// headlights), CPU-filled each frame. The world consumes it in the VERTEX shader (SA is vertex-lit and
// world verts ≪ pixels); small dynamic entities sample it per pixel. Bounded loop (count ≤ 64 — guardrail).
struct LocalLight {
  position: vec4f, // xyz world + radius
  color: vec4f,    // linear RGB × intensity; w spare
};
@group(0) @binding(3) var<storage, read> localLights: array<LocalLight>;

fn localLightSum(world: vec3f, normal: vec3f) -> vec3f {
  var sum = vec3f(0.0);
  let count = min(u32(frame.params3.x), 64u);
  for (var index = 0u; index < count; index += 1u) {
    let light = localLights[index];
    let toLight = light.position.xyz - world;
    let dist = length(toLight);
    let radius = light.position.w;
    if (dist < radius) {
      // Wrapped N·L (lamps bleed around corners a little — the SA look) × smooth quadratic falloff.
      let ndl = clamp((dot(normal, toLight / max(dist, 0.01)) + 0.4) / 1.4, 0.0, 1.0);
      let falloff = 1.0 - dist / radius;
      sum += light.color.rgb * (ndl * falloff * falloff);
    }
  }
  return sum;
}
"
`;

exports[`shader store > positive cases > golden snapshot per module (shader diffs become reviewable) > ped 1`] = `
"

struct Frame {
  viewProj: mat4x4f,
  invViewProj: mat4x4f,
  camera: vec4f,
  // Environment (plan 074/06): sun direction (unit, towards the sun; .w = CURRENT ARC ELEVATION 0..1,
  // the sun-vis v2 threshold input — 074/07), sun colour,
  // params  = [dn (0 day → 1 night), indirectScale, directScale, emissiveBoost],
  // skyTop / skyHorizon = LINEAR sky gradient colours (row 4 v1 — the PBR LUT replaces them later),
  // fog     = [cutDistance, startDistance, heightK, heightMin] (row 5 — the 068 shape),
  // params2 = [aoStrength (074/07 baked skyVis → indirect), sunVisStrength (074/07 baked sun shadows),
  //            time seconds (the wind clock), windStrength (074/06 row 10)],
  // moonDir/moonColor = the night light (074/06 row 6; colour is BLACK by day — the CPU arc gates it);
  // moonDir.w = stochastic de-tiling toggle (074/12; the vec4 slot was spare).
  sunDir: vec4f,
  sunColor: vec4f,
  params: vec4f,
  skyTop: vec4f,
  skyHorizon: vec4f,
  fog: vec4f,
  params2: vec4f,
  moonDir: vec4f,
  moonColor: vec4f,
  // params3 = [localLightCount (074/06 row 7), spare, spare, spare].
  params3: vec4f,
};
@group(0) @binding(0) var<uniform> frame: Frame;
@group(0) @binding(1) var skyLut: texture_2d<f32>;
@group(0) @binding(2) var skyLutSampler: sampler;

// Shared sky colour by view direction (the sky pass AND the world fog sample the same PBR dome — fully
// fogged geometry dissolves into exactly the sky behind it, the 068 invariant). The dome is a CPU-built
// Preetham LUT (074/06 row 4): u = azimuthal angle from the sun (the dome is sun-symmetric), v = elevation.
fn skyColorFor(dir: vec3f) -> vec3f {
  let elevation = clamp(dir.y, 0.0, 1.0);
  let dirXz = normalize(vec2f(dir.x, dir.z) + vec2f(1e-5, 0.0));
  let sunXz = normalize(vec2f(frame.sunDir.x, frame.sunDir.z) + vec2f(1e-5, 0.0));
  let azimuth = acos(clamp(dot(dirXz, sunXz), -1.0, 1.0)) / 3.14159265;
  let v = clamp((dir.y + 0.05) / 1.05, 0.0, 1.0);
  let base = textureSampleLevel(skyLut, skyLutSampler, vec2f(azimuth, v), 0.0).rgb;
  // Structured sun (074/06 row 4 polish): a hot angular DISC (~0.5°) + tight corona + circumsolar glow +
  // wide forward-scatter haze. The disc overshoots 1.0 on purpose — the un-tonemapped sRGB output clips the
  // core to white while the fringe keeps the timecyc sun colour (orange limb at dusk for free); plan 09's
  // HDR chain will feed the same overshoot into bloom/god-rays instead of clipping.
  let sunDot = max(dot(dir, frame.sunDir.xyz), 0.0);
  let disc = smoothstep(0.99985, 0.99997, sunDot) * 12.0;
  let corona = pow(sunDot, 600.0) * 2.2;
  let circumsolar = pow(sunDot, 32.0) * 0.5;
  let haze = pow(sunDot, 8.0) * 0.08;
  let glow = frame.sunColor.rgb * (disc + corona + circumsolar + haze);
  // Moon disc + faint halo (074/06 row 6): moonColor is BLACK by day, so this whole term dies with it;
  // the disc lives in the shared sky so fogged geometry dissolves into the moon behind it (068 invariant).
  let moonDot = max(dot(dir, frame.moonDir.xyz), 0.0);
  // Wide soft halo (pow 96) marks the spot in the horizon band; the disc itself stays small and bright.
  let moon = frame.moonColor.rgb * (smoothstep(0.9985, 0.9993, moonDot) * 14.0 + pow(moonDot, 96.0) * 2.2);
  return base + glow + moon;
}

// Local light pool (074/06 row 7): up to 64 point lights (2dfx street lamps + host dynamics — vehicle
// headlights), CPU-filled each frame. The world consumes it in the VERTEX shader (SA is vertex-lit and
// world verts ≪ pixels); small dynamic entities sample it per pixel. Bounded loop (count ≤ 64 — guardrail).
struct LocalLight {
  position: vec4f, // xyz world + radius
  color: vec4f,    // linear RGB × intensity; w spare
};
@group(0) @binding(3) var<storage, read> localLights: array<LocalLight>;

fn localLightSum(world: vec3f, normal: vec3f) -> vec3f {
  var sum = vec3f(0.0);
  let count = min(u32(frame.params3.x), 64u);
  for (var index = 0u; index < count; index += 1u) {
    let light = localLights[index];
    let toLight = light.position.xyz - world;
    let dist = length(toLight);
    let radius = light.position.w;
    if (dist < radius) {
      // Wrapped N·L (lamps bleed around corners a little — the SA look) × smooth quadratic falloff.
      let ndl = clamp((dot(normal, toLight / max(dist, 0.01)) + 0.4) / 1.4, 0.0, 1.0);
      let falloff = 1.0 - dist / radius;
      sum += light.color.rgb * (ndl * falloff * falloff);
    }
  }
  return sum;
}


// Skinning probe (074/08 B1): one skinned entity through the intended dynamics path — matrices in a
// STORAGE buffer (slot 0 = the model matrix carrying the GTA→engine axis change, bone palettes follow),
// 4-bone vertex blend, textured sun/indirect lighting + the shared fog. No prelit — peds are dynamically
// lit (the plan-034 night fill joins in M3).
struct PedVsIn {
  @location(0) position: vec3f,
  @location(1) normal: vec3f,
  @location(2) uv: vec2f,
  @location(3) joints: vec4<u32>,
  @location(4) weights: vec4f,
};

struct PedVsOut {
  @builtin(position) clip: vec4f,
  @location(0) uv: vec2f,
  @location(1) normal: vec3f,
  @location(2) world: vec3f,
};

@group(1) @binding(0) var<storage, read> pedMatrices: array<mat4x4f>;
@group(1) @binding(1) var pedTexture: texture_2d<f32>;
@group(1) @binding(2) var pedSampler: sampler;

@vertex
fn vsPed(in: PedVsIn) -> PedVsOut {
  let source = vec4f(in.position, 1.0);
  let skinned =
    (pedMatrices[1u + in.joints.x] * source) * in.weights.x +
    (pedMatrices[1u + in.joints.y] * source) * in.weights.y +
    (pedMatrices[1u + in.joints.z] * source) * in.weights.z +
    (pedMatrices[1u + in.joints.w] * source) * in.weights.w;
  let sourceNormal = vec4f(in.normal, 0.0);
  let skinnedNormal =
    (pedMatrices[1u + in.joints.x] * sourceNormal) * in.weights.x +
    (pedMatrices[1u + in.joints.y] * sourceNormal) * in.weights.y +
    (pedMatrices[1u + in.joints.z] * sourceNormal) * in.weights.z +
    (pedMatrices[1u + in.joints.w] * sourceNormal) * in.weights.w;
  let world = pedMatrices[0] * vec4f(skinned.xyz, 1.0);
  var out: PedVsOut;
  out.clip = frame.viewProj * world;
  out.uv = in.uv;
  out.normal = normalize((pedMatrices[0] * vec4f(skinnedNormal.xyz, 0.0)).xyz);
  out.world = world.xyz;
  return out;
}

@fragment
fn fsPed(in: PedVsOut) -> @location(0) vec4f {
  let texel = textureSample(pedTexture, pedSampler, in.uv);
  if (texel.a < 0.5) {
    discard;
  }
  let normal = normalize(in.normal);
  let sunNdl = max(dot(normal, frame.sunDir.xyz), 0.0);
  let moonNdl = clamp((dot(normal, frame.moonDir.xyz) + 0.6) / 1.6, 0.0, 1.0);
  let lit = vec3f(frame.params.y) + frame.sunColor.rgb * (sunNdl * frame.params.z) + frame.moonColor.rgb * moonNdl +
    localLightSum(in.world, normal);
  var color = texel.rgb * lit;
  // Same unified fog shape as fsWorld (068 invariant: distant peds dissolve into the sky behind them).
  let toCamera = in.world - frame.camera.xyz;
  let dist = length(toCamera);
  let viewDir = toCamera / max(dist, 0.001);
  let fogD = max(dist - frame.fog.y, 0.0);
  let fogK = 2.0 / max(frame.fog.x - frame.fog.y, 1.0);
  var fogFactor = 1.0 - exp(-(fogK * fogD) * (fogK * fogD));
  let heightAtten = mix(frame.fog.w, 1.0, exp(-max(in.world.y, 0.0) * frame.fog.z));
  fogFactor = fogFactor * heightAtten;
  fogFactor = max(fogFactor, smoothstep(frame.fog.x * 0.85, frame.fog.x, dist));
  color = mix(color, skyColorFor(viewDir), fogFactor);
  return vec4f(color, 1.0);
}
"
`;

exports[`shader store > positive cases > golden snapshot per module (shader diffs become reviewable) > rigid 1`] = `
"

struct Frame {
  viewProj: mat4x4f,
  invViewProj: mat4x4f,
  camera: vec4f,
  // Environment (plan 074/06): sun direction (unit, towards the sun; .w = CURRENT ARC ELEVATION 0..1,
  // the sun-vis v2 threshold input — 074/07), sun colour,
  // params  = [dn (0 day → 1 night), indirectScale, directScale, emissiveBoost],
  // skyTop / skyHorizon = LINEAR sky gradient colours (row 4 v1 — the PBR LUT replaces them later),
  // fog     = [cutDistance, startDistance, heightK, heightMin] (row 5 — the 068 shape),
  // params2 = [aoStrength (074/07 baked skyVis → indirect), sunVisStrength (074/07 baked sun shadows),
  //            time seconds (the wind clock), windStrength (074/06 row 10)],
  // moonDir/moonColor = the night light (074/06 row 6; colour is BLACK by day — the CPU arc gates it);
  // moonDir.w = stochastic de-tiling toggle (074/12; the vec4 slot was spare).
  sunDir: vec4f,
  sunColor: vec4f,
  params: vec4f,
  skyTop: vec4f,
  skyHorizon: vec4f,
  fog: vec4f,
  params2: vec4f,
  moonDir: vec4f,
  moonColor: vec4f,
  // params3 = [localLightCount (074/06 row 7), spare, spare, spare].
  params3: vec4f,
};
@group(0) @binding(0) var<uniform> frame: Frame;
@group(0) @binding(1) var skyLut: texture_2d<f32>;
@group(0) @binding(2) var skyLutSampler: sampler;

// Shared sky colour by view direction (the sky pass AND the world fog sample the same PBR dome — fully
// fogged geometry dissolves into exactly the sky behind it, the 068 invariant). The dome is a CPU-built
// Preetham LUT (074/06 row 4): u = azimuthal angle from the sun (the dome is sun-symmetric), v = elevation.
fn skyColorFor(dir: vec3f) -> vec3f {
  let elevation = clamp(dir.y, 0.0, 1.0);
  let dirXz = normalize(vec2f(dir.x, dir.z) + vec2f(1e-5, 0.0));
  let sunXz = normalize(vec2f(frame.sunDir.x, frame.sunDir.z) + vec2f(1e-5, 0.0));
  let azimuth = acos(clamp(dot(dirXz, sunXz), -1.0, 1.0)) / 3.14159265;
  let v = clamp((dir.y + 0.05) / 1.05, 0.0, 1.0);
  let base = textureSampleLevel(skyLut, skyLutSampler, vec2f(azimuth, v), 0.0).rgb;
  // Structured sun (074/06 row 4 polish): a hot angular DISC (~0.5°) + tight corona + circumsolar glow +
  // wide forward-scatter haze. The disc overshoots 1.0 on purpose — the un-tonemapped sRGB output clips the
  // core to white while the fringe keeps the timecyc sun colour (orange limb at dusk for free); plan 09's
  // HDR chain will feed the same overshoot into bloom/god-rays instead of clipping.
  let sunDot = max(dot(dir, frame.sunDir.xyz), 0.0);
  let disc = smoothstep(0.99985, 0.99997, sunDot) * 12.0;
  let corona = pow(sunDot, 600.0) * 2.2;
  let circumsolar = pow(sunDot, 32.0) * 0.5;
  let haze = pow(sunDot, 8.0) * 0.08;
  let glow = frame.sunColor.rgb * (disc + corona + circumsolar + haze);
  // Moon disc + faint halo (074/06 row 6): moonColor is BLACK by day, so this whole term dies with it;
  // the disc lives in the shared sky so fogged geometry dissolves into the moon behind it (068 invariant).
  let moonDot = max(dot(dir, frame.moonDir.xyz), 0.0);
  // Wide soft halo (pow 96) marks the spot in the horizon band; the disc itself stays small and bright.
  let moon = frame.moonColor.rgb * (smoothstep(0.9985, 0.9993, moonDot) * 14.0 + pow(moonDot, 96.0) * 2.2);
  return base + glow + moon;
}

// Local light pool (074/06 row 7): up to 64 point lights (2dfx street lamps + host dynamics — vehicle
// headlights), CPU-filled each frame. The world consumes it in the VERTEX shader (SA is vertex-lit and
// world verts ≪ pixels); small dynamic entities sample it per pixel. Bounded loop (count ≤ 64 — guardrail).
struct LocalLight {
  position: vec4f, // xyz world + radius
  color: vec4f,    // linear RGB × intensity; w spare
};
@group(0) @binding(3) var<storage, read> localLights: array<LocalLight>;

fn localLightSum(world: vec3f, normal: vec3f) -> vec3f {
  var sum = vec3f(0.0);
  let count = min(u32(frame.params3.x), 64u);
  for (var index = 0u; index < count; index += 1u) {
    let light = localLights[index];
    let toLight = light.position.xyz - world;
    let dist = length(toLight);
    let radius = light.position.w;
    if (dist < radius) {
      // Wrapped N·L (lamps bleed around corners a little — the SA look) × smooth quadratic falloff.
      let ndl = clamp((dot(normal, toLight / max(dist, 0.01)) + 0.4) / 1.4, 0.0, 1.0);
      let falloff = 1.0 - dist / radius;
      sum += light.color.rgb * (ndl * falloff * falloff);
    }
  }
  return sum;
}


// Rigid-part dynamics (074/08 B2): vehicle-style entities — CPU-flattened part matrices in a storage
// buffer, parts drawn with firstInstance = part index (instance_index reads the matrix). Paint colours
// ride per-vertex (carcols markers resolved offline); slots.x = texture-array layer. fsRigid = opaque
// (alpha forced 1), fsRigidBlend = premultiplied glass on the blend pipeline.
struct RigidVsIn {
  @builtin(instance_index) instance: u32,
  @location(0) position: vec3f,
  @location(1) normal: vec3f,
  @location(2) uv: vec2f,
  @location(3) color: vec4f,
  @location(4) slots: vec4<u32>,
};

struct RigidVsOut {
  @builtin(position) clip: vec4f,
  @location(0) uv: vec2f,
  @location(1) normal: vec3f,
  @location(2) world: vec3f,
  @location(3) color: vec4f,
  @location(4) @interpolate(flat) layer: u32,
  @location(5) @interpolate(flat) nightLayer: u32,
};

@group(1) @binding(0) var<storage, read> rigidMatrices: array<mat4x4f>;
@group(1) @binding(1) var rigidTexture: texture_2d_array<f32>;
@group(1) @binding(2) var rigidSampler: sampler;

@vertex
fn vsRigid(in: RigidVsIn) -> RigidVsOut {
  let model = rigidMatrices[in.instance];
  let world = model * vec4f(in.position, 1.0);
  var out: RigidVsOut;
  out.clip = frame.viewProj * world;
  out.uv = in.uv;
  out.normal = normalize((model * vec4f(in.normal, 0.0)).xyz);
  out.world = world.xyz;
  out.color = in.color;
  out.layer = in.slots.x;
  out.nightLayer = in.slots.y;
  return out;
}

fn rigidShade(in: RigidVsOut) -> vec3f {
  // Lamp materials carry a lamps-on TWIN layer (SA's vehiclelights → vehiclelightson swap): pick it at
  // night. Per-vehicle lamp state replaces the dn gate when real gameplay owns the entity (plan 10 B3).
  let lampsOn = frame.params.x > 0.5 && in.nightLayer != 0u;
  let layer = select(in.layer, in.nightLayer, lampsOn);
  let texel = textureSample(rigidTexture, rigidSampler, in.uv, layer);
  let normal = normalize(in.normal);
  let sunNdl = max(dot(normal, frame.sunDir.xyz), 0.0);
  let moonNdl = clamp((dot(normal, frame.moonDir.xyz) + 0.6) / 1.6, 0.0, 1.0);
  let lit = vec3f(frame.params.y) + frame.sunColor.rgb * (sunNdl * frame.params.z) + frame.moonColor.rgb * moonNdl +
    localLightSum(in.world, normal);
  return texel.rgb * in.color.rgb * lit;
}

fn rigidFog(world: vec3f) -> f32 {
  let toCamera = world - frame.camera.xyz;
  let dist = length(toCamera);
  let fogD = max(dist - frame.fog.y, 0.0);
  let fogK = 2.0 / max(frame.fog.x - frame.fog.y, 1.0);
  var fogFactor = 1.0 - exp(-(fogK * fogD) * (fogK * fogD));
  fogFactor = fogFactor * mix(frame.fog.w, 1.0, exp(-max(world.y, 0.0) * frame.fog.z));
  return max(fogFactor, smoothstep(frame.fog.x * 0.85, frame.fog.x, dist));
}

@fragment
fn fsRigid(in: RigidVsOut) -> @location(0) vec4f {
  let fog = rigidFog(in.world);
  let viewDir = normalize(in.world - frame.camera.xyz);
  let color = mix(rigidShade(in), skyColorFor(viewDir), fog);
  return vec4f(color, 1.0);
}

@fragment
fn fsRigidBlend(in: RigidVsOut) -> @location(0) vec4f {
  // Glass: premultiplied for the (one, 1−src-α) pipeline; fog scales the pair (068 semantics for blends).
  let fog = rigidFog(in.world);
  let viewDir = normalize(in.world - frame.camera.xyz);
  let alpha = in.color.a;
  let color = mix(rigidShade(in) * alpha, skyColorFor(viewDir) * alpha, fog);
  return vec4f(color, alpha);
}
"
`;

exports[`shader store > positive cases > golden snapshot per module (shader diffs become reviewable) > sky 1`] = `
"

struct Frame {
  viewProj: mat4x4f,
  invViewProj: mat4x4f,
  camera: vec4f,
  // Environment (plan 074/06): sun direction (unit, towards the sun; .w = CURRENT ARC ELEVATION 0..1,
  // the sun-vis v2 threshold input — 074/07), sun colour,
  // params  = [dn (0 day → 1 night), indirectScale, directScale, emissiveBoost],
  // skyTop / skyHorizon = LINEAR sky gradient colours (row 4 v1 — the PBR LUT replaces them later),
  // fog     = [cutDistance, startDistance, heightK, heightMin] (row 5 — the 068 shape),
  // params2 = [aoStrength (074/07 baked skyVis → indirect), sunVisStrength (074/07 baked sun shadows),
  //            time seconds (the wind clock), windStrength (074/06 row 10)],
  // moonDir/moonColor = the night light (074/06 row 6; colour is BLACK by day — the CPU arc gates it);
  // moonDir.w = stochastic de-tiling toggle (074/12; the vec4 slot was spare).
  sunDir: vec4f,
  sunColor: vec4f,
  params: vec4f,
  skyTop: vec4f,
  skyHorizon: vec4f,
  fog: vec4f,
  params2: vec4f,
  moonDir: vec4f,
  moonColor: vec4f,
  // params3 = [localLightCount (074/06 row 7), spare, spare, spare].
  params3: vec4f,
};
@group(0) @binding(0) var<uniform> frame: Frame;
@group(0) @binding(1) var skyLut: texture_2d<f32>;
@group(0) @binding(2) var skyLutSampler: sampler;

// Shared sky colour by view direction (the sky pass AND the world fog sample the same PBR dome — fully
// fogged geometry dissolves into exactly the sky behind it, the 068 invariant). The dome is a CPU-built
// Preetham LUT (074/06 row 4): u = azimuthal angle from the sun (the dome is sun-symmetric), v = elevation.
fn skyColorFor(dir: vec3f) -> vec3f {
  let elevation = clamp(dir.y, 0.0, 1.0);
  let dirXz = normalize(vec2f(dir.x, dir.z) + vec2f(1e-5, 0.0));
  let sunXz = normalize(vec2f(frame.sunDir.x, frame.sunDir.z) + vec2f(1e-5, 0.0));
  let azimuth = acos(clamp(dot(dirXz, sunXz), -1.0, 1.0)) / 3.14159265;
  let v = clamp((dir.y + 0.05) / 1.05, 0.0, 1.0);
  let base = textureSampleLevel(skyLut, skyLutSampler, vec2f(azimuth, v), 0.0).rgb;
  // Structured sun (074/06 row 4 polish): a hot angular DISC (~0.5°) + tight corona + circumsolar glow +
  // wide forward-scatter haze. The disc overshoots 1.0 on purpose — the un-tonemapped sRGB output clips the
  // core to white while the fringe keeps the timecyc sun colour (orange limb at dusk for free); plan 09's
  // HDR chain will feed the same overshoot into bloom/god-rays instead of clipping.
  let sunDot = max(dot(dir, frame.sunDir.xyz), 0.0);
  let disc = smoothstep(0.99985, 0.99997, sunDot) * 12.0;
  let corona = pow(sunDot, 600.0) * 2.2;
  let circumsolar = pow(sunDot, 32.0) * 0.5;
  let haze = pow(sunDot, 8.0) * 0.08;
  let glow = frame.sunColor.rgb * (disc + corona + circumsolar + haze);
  // Moon disc + faint halo (074/06 row 6): moonColor is BLACK by day, so this whole term dies with it;
  // the disc lives in the shared sky so fogged geometry dissolves into the moon behind it (068 invariant).
  let moonDot = max(dot(dir, frame.moonDir.xyz), 0.0);
  // Wide soft halo (pow 96) marks the spot in the horizon band; the disc itself stays small and bright.
  let moon = frame.moonColor.rgb * (smoothstep(0.9985, 0.9993, moonDot) * 14.0 + pow(moonDot, 96.0) * 2.2);
  return base + glow + moon;
}

// Local light pool (074/06 row 7): up to 64 point lights (2dfx street lamps + host dynamics — vehicle
// headlights), CPU-filled each frame. The world consumes it in the VERTEX shader (SA is vertex-lit and
// world verts ≪ pixels); small dynamic entities sample it per pixel. Bounded loop (count ≤ 64 — guardrail).
struct LocalLight {
  position: vec4f, // xyz world + radius
  color: vec4f,    // linear RGB × intensity; w spare
};
@group(0) @binding(3) var<storage, read> localLights: array<LocalLight>;

fn localLightSum(world: vec3f, normal: vec3f) -> vec3f {
  var sum = vec3f(0.0);
  let count = min(u32(frame.params3.x), 64u);
  for (var index = 0u; index < count; index += 1u) {
    let light = localLights[index];
    let toLight = light.position.xyz - world;
    let dist = length(toLight);
    let radius = light.position.w;
    if (dist < radius) {
      // Wrapped N·L (lamps bleed around corners a little — the SA look) × smooth quadratic falloff.
      let ndl = clamp((dot(normal, toLight / max(dist, 0.01)) + 0.4) / 1.4, 0.0, 1.0);
      let falloff = 1.0 - dist / radius;
      sum += light.color.rgb * (ndl * falloff * falloff);
    }
  }
  return sum;
}


// Fullscreen sky (074/06 row 4 v1): a big triangle at far depth; depth-test LESS-EQUAL against 1.0 keeps it
// behind everything drawn. The gradient + sun glow live in <frame> (shared with the world fog).
struct SkyOut {
  @builtin(position) clip: vec4f,
  @location(0) ndc: vec2f,
};

@vertex
fn vsSky(@builtin(vertex_index) index: u32) -> SkyOut {
  var out: SkyOut;
  let x = f32(i32(index & 1u) * 4 - 1);
  let y = f32(i32(index >> 1u) * 4 - 1);
  // Reversed-Z: the far plane is depth 0.
  out.clip = vec4f(x, y, 0.0, 1.0);
  out.ndc = vec2f(x, y);
  return out;
}

// Procedural night starfield (074/06 row 16, the prod sky.plugin port): gnomonic-projected cell hash —
// ~one star per 10 % of cells, random brightness, gentle twinkle, horizon taper. SKY PASS ONLY: fog and
// world fragments share skyColorFor and must NOT twinkle.
fn hash21(cell: vec2f) -> f32 {
  return fract(sin(dot(cell, vec2f(127.1, 311.7))) * 43758.5453);
}

fn starField(dir: vec3f) -> f32 {
  if (dir.y <= 0.02) {
    return 0.0;
  }
  let uv = dir.xz / dir.y * 6.0;
  let cell = floor(uv);
  let f = fract(uv);
  let present = step(0.90, hash21(cell));
  let star = vec2f(hash21(cell + 1.7), hash21(cell + 4.3));
  let d = length(f - star);
  let point = smoothstep(0.06, 0.0, d) * present;
  let bright = 0.35 + 0.65 * hash21(cell + 8.1);
  let twinkle = 0.6 + 0.4 * sin(frame.params2.z * 2.5 + hash21(cell) * 90.0);
  let taper = smoothstep(0.02, 0.35, dir.y);
  return point * bright * twinkle * taper;
}

@fragment
fn fsSky(in: SkyOut) -> @location(0) vec4f {
  let far = frame.invViewProj * vec4f(in.ndc, 1.0, 1.0);
  let dir = normalize(far.xyz / far.w - frame.camera.xyz);
  var col = skyColorFor(dir);
  // Stars gate on dn only in v1 — the row-15 cloud work adds the overcast fade (prod's uCloudClear).
  col += vec3f(starField(dir)) * frame.params.x;
  return vec4f(col, 1.0);
}
"
`;

exports[`shader store > positive cases > golden snapshot per module (shader diffs become reviewable) > world 1`] = `
"

struct Frame {
  viewProj: mat4x4f,
  invViewProj: mat4x4f,
  camera: vec4f,
  // Environment (plan 074/06): sun direction (unit, towards the sun; .w = CURRENT ARC ELEVATION 0..1,
  // the sun-vis v2 threshold input — 074/07), sun colour,
  // params  = [dn (0 day → 1 night), indirectScale, directScale, emissiveBoost],
  // skyTop / skyHorizon = LINEAR sky gradient colours (row 4 v1 — the PBR LUT replaces them later),
  // fog     = [cutDistance, startDistance, heightK, heightMin] (row 5 — the 068 shape),
  // params2 = [aoStrength (074/07 baked skyVis → indirect), sunVisStrength (074/07 baked sun shadows),
  //            time seconds (the wind clock), windStrength (074/06 row 10)],
  // moonDir/moonColor = the night light (074/06 row 6; colour is BLACK by day — the CPU arc gates it);
  // moonDir.w = stochastic de-tiling toggle (074/12; the vec4 slot was spare).
  sunDir: vec4f,
  sunColor: vec4f,
  params: vec4f,
  skyTop: vec4f,
  skyHorizon: vec4f,
  fog: vec4f,
  params2: vec4f,
  moonDir: vec4f,
  moonColor: vec4f,
  // params3 = [localLightCount (074/06 row 7), spare, spare, spare].
  params3: vec4f,
};
@group(0) @binding(0) var<uniform> frame: Frame;
@group(0) @binding(1) var skyLut: texture_2d<f32>;
@group(0) @binding(2) var skyLutSampler: sampler;

// Shared sky colour by view direction (the sky pass AND the world fog sample the same PBR dome — fully
// fogged geometry dissolves into exactly the sky behind it, the 068 invariant). The dome is a CPU-built
// Preetham LUT (074/06 row 4): u = azimuthal angle from the sun (the dome is sun-symmetric), v = elevation.
fn skyColorFor(dir: vec3f) -> vec3f {
  let elevation = clamp(dir.y, 0.0, 1.0);
  let dirXz = normalize(vec2f(dir.x, dir.z) + vec2f(1e-5, 0.0));
  let sunXz = normalize(vec2f(frame.sunDir.x, frame.sunDir.z) + vec2f(1e-5, 0.0));
  let azimuth = acos(clamp(dot(dirXz, sunXz), -1.0, 1.0)) / 3.14159265;
  let v = clamp((dir.y + 0.05) / 1.05, 0.0, 1.0);
  let base = textureSampleLevel(skyLut, skyLutSampler, vec2f(azimuth, v), 0.0).rgb;
  // Structured sun (074/06 row 4 polish): a hot angular DISC (~0.5°) + tight corona + circumsolar glow +
  // wide forward-scatter haze. The disc overshoots 1.0 on purpose — the un-tonemapped sRGB output clips the
  // core to white while the fringe keeps the timecyc sun colour (orange limb at dusk for free); plan 09's
  // HDR chain will feed the same overshoot into bloom/god-rays instead of clipping.
  let sunDot = max(dot(dir, frame.sunDir.xyz), 0.0);
  let disc = smoothstep(0.99985, 0.99997, sunDot) * 12.0;
  let corona = pow(sunDot, 600.0) * 2.2;
  let circumsolar = pow(sunDot, 32.0) * 0.5;
  let haze = pow(sunDot, 8.0) * 0.08;
  let glow = frame.sunColor.rgb * (disc + corona + circumsolar + haze);
  // Moon disc + faint halo (074/06 row 6): moonColor is BLACK by day, so this whole term dies with it;
  // the disc lives in the shared sky so fogged geometry dissolves into the moon behind it (068 invariant).
  let moonDot = max(dot(dir, frame.moonDir.xyz), 0.0);
  // Wide soft halo (pow 96) marks the spot in the horizon band; the disc itself stays small and bright.
  let moon = frame.moonColor.rgb * (smoothstep(0.9985, 0.9993, moonDot) * 14.0 + pow(moonDot, 96.0) * 2.2);
  return base + glow + moon;
}

// Local light pool (074/06 row 7): up to 64 point lights (2dfx street lamps + host dynamics — vehicle
// headlights), CPU-filled each frame. The world consumes it in the VERTEX shader (SA is vertex-lit and
// world verts ≪ pixels); small dynamic entities sample it per pixel. Bounded loop (count ≤ 64 — guardrail).
struct LocalLight {
  position: vec4f, // xyz world + radius
  color: vec4f,    // linear RGB × intensity; w spare
};
@group(0) @binding(3) var<storage, read> localLights: array<LocalLight>;

fn localLightSum(world: vec3f, normal: vec3f) -> vec3f {
  var sum = vec3f(0.0);
  let count = min(u32(frame.params3.x), 64u);
  for (var index = 0u; index < count; index += 1u) {
    let light = localLights[index];
    let toLight = light.position.xyz - world;
    let dist = length(toLight);
    let radius = light.position.w;
    if (dist < radius) {
      // Wrapped N·L (lamps bleed around corners a little — the SA look) × smooth quadratic falloff.
      let ndl = clamp((dot(normal, toLight / max(dist, 0.01)) + 0.4) / 1.4, 0.0, 1.0);
      let falloff = 1.0 - dist / radius;
      sum += light.color.rgb * (ndl * falloff * falloff);
    }
  }
  return sum;
}


// origin.w = per-cell channel flag bits: bit 0 = baked sunVis (normal.w meaningful), bit 1 = baked
// emissive mask (high channels byte meaningful). Zero = neither (old paks render unchanged).
struct Cell {
  origin: vec4f,
};
@group(1) @binding(0) var<uniform> cell: Cell;

@group(2) @binding(0) var worldTexture: texture_2d_array<f32>;
@group(2) @binding(1) var worldSampler: sampler;

struct VsIn {
  @location(0) position: vec3f,
  @location(1) uv: vec2f,
  @location(2) dayPrelit: vec4f,
  @location(3) layerChannels: vec2u,
  @location(4) normal: vec4f,
  @location(5) nightPrelit: vec4f,
};

struct VsOut {
  @builtin(position) clip: vec4f,
  @location(0) uv: vec2f,
  @location(1) prelit: vec3f,
  @location(2) @interpolate(flat) layer: u32,
  @location(3) sunNdl: f32,
  @location(4) world: vec3f,
  @location(5) glow: vec3f,
  @location(6) ao: f32,
  @location(7) cone: f32,
  @location(8) moonNdl: f32,
  @location(9) localLight: vec3f,
};

@vertex
fn vsWorld(in: VsIn) -> VsOut {
  var out: VsOut;
  var world = in.position + cell.origin.xyz;
  // Wind sway (074/06 row 10, the plan-039 model baked offline): nightPrelit.a = amplitude in METRES
  // (0 for everything rigid — the displacement is a data-driven no-op there). Phase rides world-space
  // position with LOW frequency so one canopy moves nearly as a unit but a row of palms doesn't lockstep.
  let sway = in.nightPrelit.a * frame.params2.w;
  let swayT = frame.params2.z * 1.2 + world.x * 0.05 + world.z * 0.04;
  world.x += sin(swayT) * sway;
  world.z += cos(swayT * 0.7) * sway * 0.6;
  out.clip = frame.viewProj * vec4f(world, 1.0);
  out.world = world;
  out.uv = in.uv;
  // Day↔night prelit blend (074/06 row 1): cells without an authored night set carry a converter-synthesized
  // night (day × ambient) — one formula for the whole world, per vertex.
  out.prelit = mix(in.dayPrelit.rgb, in.nightPrelit.rgb, frame.params.x);
  // Night emissives (074/06 rows 8-9, the 071 model): a vertex much brighter at night than by day IS a lit
  // window / neon / sign — it GLOWS instead of being merely tinted. The BAKED mask (07, high channels byte)
  // replaces the runtime luma-delta heuristic when the cell carries it; dn fades either in.
  let cellFlags = u32(cell.origin.w + 0.5);
  let luma = vec3f(0.2126, 0.7152, 0.0722);
  let delta = dot(in.nightPrelit.rgb, luma) - dot(in.dayPrelit.rgb, luma);
  let heuristic = smoothstep(0.05, 0.32, delta);
  let baked = f32(in.layerChannels.y >> 8u) / 255.0;
  let emissive = mix(heuristic, baked, f32((cellFlags >> 1u) & 1u));
  out.glow = in.nightPrelit.rgb * (emissive * frame.params.w * frame.params.x);
  out.layer = in.layerChannels.x;
  // Sun N·L per vertex (074/06 row 3) — GTA geometry is low-poly; per-vertex matches the shipped look.
  // Baked sun visibility (074/07, 066/03 v1 scalar): normal.w = arc-averaged sun occlusion — the STATIC
  // shadow term (under bridges / canyons the direct sun dies), smooth by construction, no shadow map.
  // Sun-vis SCALAR (074/07 v1, the accepted look): normal.w = arc-averaged sun visibility — soft static
  // occlusion (dark under bridges/canyons), does NOT track the moving sun. The directional v2 is PARKED
  // until the converter can subdivide large receiver polys (see plan 07).
  let sunGate = f32(cellFlags & 1u) * frame.params2.y;
  let sunVis = mix(1.0, clamp(in.normal.w, 0.0, 1.0), sunGate);
  let worldNormal = normalize(in.normal.xyz);
  out.sunNdl = max(dot(worldNormal, frame.sunDir.xyz), 0.0) * sunVis;
  // Moon N·L, WRAPPED (074/06 row 6): the same static occlusion gates moonlight.
  out.moonNdl = clamp((dot(worldNormal, frame.moonDir.xyz) + 0.6) / 1.6, 0.0, 1.0) * sunVis;
  // Baked AO/skyVis (074/07): low byte of channels; 0 means UNBAKED (old paks) → fully open, not black.
  let aoByte = in.layerChannels.y & 0xffu;
  let aoVis = select(f32(aoByte) / 255.0, 1.0, aoByte == 0u);
  out.ao = mix(1.0, aoVis, frame.params2.x);
  // Beam cone alpha (074/06 row 11): dayPrelit.a — 1 everywhere except floodlight-cone geometry.
  out.cone = in.dayPrelit.a;
  // Local light pool (074/06 row 7): VERTEX-lit like everything else in SA.
  out.localLight = localLightSum(world, worldNormal);
  return out;
}

// Stochastic de-tiling (074/12, the skygfx 3-tap tiling-and-blend): UVs skew into a triangular grid, each
// grid vertex hashes to a random UV offset, 3 taps blend by barycentric weights — macro-repetition dies,
// micro-detail stays. Explicit grads are mandatory twice over: the offsets are DISCONTINUOUS at grid seams
// (implicit gradients pick garbage mips there), and this runs in a non-uniform branch.
fn hash2D2D(s: vec2f) -> vec2f {
  return fract(sin(vec2f(dot(s, vec2f(127.1, 311.7)), dot(s, vec2f(269.5, 183.3))) % 3.14159) * 43758.5453);
}

fn stochasticTexel(uv: vec2f, layer: u32, uvDx: vec2f, uvDy: vec2f) -> vec4f {
  let skew = mat2x2f(vec2f(1.0, -0.57735027), vec2f(0.0, 1.15470054)) * (uv * 3.464);
  let vxID = floor(skew);
  let fracts = fract(skew);
  let bz = 1.0 - fracts.x - fracts.y;
  var v0 = vxID + vec2f(1.0, 1.0);
  var v1 = vxID + vec2f(1.0, 0.0);
  var v2 = vxID + vec2f(0.0, 1.0);
  var w = vec3f(-bz, 1.0 - fracts.y, 1.0 - fracts.x);
  if (bz > 0.0) {
    v0 = vxID;
    v1 = vxID + vec2f(0.0, 1.0);
    v2 = vxID + vec2f(1.0, 0.0);
    w = vec3f(bz, fracts.y, fracts.x);
  }
  return textureSampleGrad(worldTexture, worldSampler, uv + hash2D2D(v0), layer, uvDx, uvDy) * w.x +
    textureSampleGrad(worldTexture, worldSampler, uv + hash2D2D(v1), layer, uvDx, uvDy) * w.y +
    textureSampleGrad(worldTexture, worldSampler, uv + hash2D2D(v2), layer, uvDx, uvDy) * w.z;
}

fn worldShade(in: VsOut, cutout: bool) -> vec4f {
  // Textures ship PREMULTIPLIED (074/02): filtering is correct by construction, transparent texels
  // contribute nothing — the alpha-edge fix. Alpha feeds coverage on the cutout pipeline (A2C).
  // Layer bit 15 = stochastic flag (074/12); grads + the plain tap stay in UNIFORM control flow.
  let layer = in.layer & 0xffu;
  let uvDx = dpdx(in.uv);
  let uvDy = dpdy(in.uv);
  var texel = textureSample(worldTexture, worldSampler, in.uv, layer);
  if ((in.layer & 0x8000u) != 0u && frame.moonDir.w > 0.5) {
    texel = stochasticTexel(in.uv, layer, uvDx, uvDy);
  }
  if (cutout) {
    // Needle-fine foliage minifies to FRACTIONAL sampled alpha across the whole crown (each pixel covers
    // many leaf/gap texels) — raw A2C turns that into a uniform screen-door stipple. Sharpen the SAMPLED
    // alpha toward the vanilla alpha-test look (fwidth keeps real silhouettes antialiased) and
    // un-premultiply the colour so boosted coverage does not render the ×alpha-darkened RGB.
    let sharpened = clamp((texel.a - 0.5) / max(fwidth(texel.a), 0.0001) + 0.5, 0.0, 1.0);
    texel = vec4f(texel.rgb / max(texel.a, 0.05), sharpened);
  }
  // Hybrid lighting (074/06 row 3, the shipped 064 model): prelit is the INDIRECT term, the sun adds a real
  // direct term on the raw albedo. indirect/direct ride frame params — day arcs are a CPU concern.
  // Baked AO modulates ONLY the indirect term (074/07) — sun shadowing is the separate sunVis bake.
  let lit = in.prelit * (frame.params.y * in.ao) +
    frame.sunColor.rgb * (in.sunNdl * frame.params.z) +
    frame.moonColor.rgb * in.moonNdl +
    in.localLight;
  var color = texel.rgb * (lit + in.glow);
  // Unified fog (074/06 row 5, the 068 shape): RADIAL distance (view-Z pops at screen edges), exp² over
  // [start, cut], height attenuation (haze hugs the ground), hard horizon cut — and the fog colour is the
  // SKY at this direction, so distant geometry dissolves into exactly what's behind it.
  let toCamera = in.world - frame.camera.xyz;
  let dist = length(toCamera);
  let viewDir = toCamera / max(dist, 0.001);
  let fogD = max(dist - frame.fog.y, 0.0);
  let fogK = 2.0 / max(frame.fog.x - frame.fog.y, 1.0);
  var fogFactor = 1.0 - exp(-(fogK * fogD) * (fogK * fogD));
  let heightAtten = mix(frame.fog.w, 1.0, exp(-max(in.world.y, 0.0) * frame.fog.z));
  fogFactor = fogFactor * heightAtten;
  fogFactor = max(fogFactor, smoothstep(frame.fog.x * 0.85, frame.fog.x, dist));
  // Sky term scaled by texel.a: colour is PREMULTIPLIED, so the blend pipelines (074/06 rows 9/11) stay
  // premult-correct in fog; opaque/cutout (a ≈ 1) are unchanged.
  color = mix(color, skyColorFor(viewDir) * texel.a, fogFactor);
  return vec4f(color, texel.a);
}

@fragment
fn fsWorld(in: VsOut) -> @location(0) vec4f {
  return worldShade(in, false);
}

@fragment
fn fsWorldCutout(in: VsOut) -> @location(0) vec4f {
  return worldShade(in, true);
}

@fragment
fn fsBeam(in: VsOut) -> @location(0) vec4f {
  // Floodlight cones (074/06 row 11, plan 032): 'white'-textured geometry whose soft cone lives in the
  // per-vertex prelit ALPHA. Output is PREMULTIPLIED for the (one, one-minus-src-alpha) blend pipeline.
  // No sun/glow terms — a beam is self-lit, tinted only by the dn-mixed prelit colour.
  let texel = textureSample(worldTexture, worldSampler, in.uv, in.layer & 0xffu);
  let alpha = texel.a * in.cone;
  let color = texel.rgb * in.prelit * in.cone;
  // Fog FADES a beam out (scales the premultiplied pair) — mixing toward the sky would tint thin air.
  let dist = length(in.world - frame.camera.xyz);
  let fogD = max(dist - frame.fog.y, 0.0);
  let fogK = 2.0 / max(frame.fog.x - frame.fog.y, 1.0);
  let fade = exp(-(fogK * fogD) * (fogK * fogD)) * (1.0 - smoothstep(frame.fog.x * 0.85, frame.fog.x, dist));
  return vec4f(color * fade, alpha * fade);
}
"
`;
